fixed smaller issues regarding alignent... will take a look later.

--- a/src/app/components/landing-page-components/sections/sections.component.css
+++ b/src/app/components/landing-page-components/sections/sections.component.css
@@ -109,8 +109,6 @@
   color: white;
   font-size: 30px;
   font-weight: 300;
-  position: relative;
-  margin: 0 0 45px 0;
 }
 
 /* Section 3 css properties end*/
@@ -130,8 +128,6 @@
   color: white;
   font-size: 30px;
   font-weight: 300;
-  position: relative;
-  margin: 0 100px 45px 100px;
 }
 
 /* Section 4 CSS Properties End*/
